Added monzo endpoints to openapi.yaml
